...
        >
            <TouchableWithoutFeedback onPress={Keyboard.dismiss}>
                
                <ViewContainer >

                    <View>
                        <Text style={styles.title}>Comece agora!</Text>
                        <Text style={styles.subtitle}>Informe seus dados para entrar na sua conta.</Text>
                    </View>

                    <InputContainer label="Email">
                        <TextInputField
                            placeholder="exemplo@dominio.br"
...
