...
              );
          }

          return (
              <>
                <View style={styles.header}>
                <Text style={styles.title}>Informações do projeto</Text>
                {userData !== null ? (favoriteId ? <Ionicons name='star' onPress={handleFavorite} size={30} color={colors.primary}/> : <Ionicons name='star-outline' onPress={handleFavorite} size={30} color={colors.primary}/>) : null}
                
                </View>
                <View style={styles.box}>
                  <AppText style={styles.name}>Titulo:</AppText>
                  <AppText style={styles.subtitle}>{project && project.title}</AppText>
...
